# inteligent_query_system

./: README.md  env.example  main.py  pyproject.toml
app/core/: config.py
app/db/: database.py
app/models/: profile.py  seed_execution.py
app/routes/: internal.py  profiles.py
app/schemas/: profile.py
app/services/: profile_service.py  seed_service.py
app/utils/: exceptions.py  pagination.py  query_parser.py  responses.py
scripts/: seed.py
